--- a/configure.in
+++ b/configure.in
@@ -36,7 +36,7 @@ AC_CHECK_LIB([z], [gzopen])
 AC_CHECK_LIB([pcap], [pcap_open_live])
 AC_CHECK_LIB([ssl], [SSL_free])
 AC_CHECK_LIB([lua5.2], [luaL_newstate])
-AC_CHECK_LIB([sqlite3],[sqlite3_open])
+dnl AC_CHECK_LIB([sqlite3],[sqlite3_open])
 
 # Checks for header files.
 AC_HEADER_DIRENT
@@ -117,9 +117,9 @@ dnl
 dnl SQLite3
 dnl
 
-AC_ARG_ENABLE(sqlite3,
-[  --disable-sqlite2          SQLite3 build (default enabled)],
-[vscp_sqlite3=no],[vscp_sqlite3=yes])
+dnl AC_ARG_ENABLE(sqlite3,
+dnl [  --disable-sqlite2          SQLite3 build (default enabled)],
+dnl [vscp_sqlite3=no],[vscp_sqlite3=yes])
 dnl test "${vscp_sqlite3}" != "yes" && vscp_sqlite3="no"
 
 
@@ -206,7 +206,7 @@ fi
 if test "${vscp_sqlite3}" = yes ; then
    CPPFLAGS="$CPPFLAGS -D VSCP_ENABLE_SQLITE3"
    CFLAGS="$CFLAGS -D VSCP_ENABLE_SQLITE3"
-   EXTRALIBS="$EXTRALIBS -lsqlite3"
+dnl   EXTRALIBS="$EXTRALIBS -lsqlite3"
 fi
 
 
