It is now possible to edit in place for abstractions also in VSCP Works

--- a/src/vscp/vscpworks/codelite_vscpworks.project
+++ b/src/vscp/vscpworks/codelite_vscpworks.project
@@ -379,4 +379,5 @@ make</RebuildCommand>
   </VirtualDirectory>
   <Dependencies Name="Debug"/>
   <Dependencies Name="Release"/>
+  <VirtualDirectory Name="vscp_common"/>
 </CodeLite_Project>
