Fixed endian problem.

--- a/src/vscp/drivers/level1/can4vscp/linux/Driver_CAN4VSCP/Driver_CAN4VSCP.project
+++ b/src/vscp/drivers/level1/can4vscp/linux/Driver_CAN4VSCP/Driver_CAN4VSCP.project
@@ -104,4 +104,6 @@
     <File Name="../README"/>
     <File Name="../vscpl1_can4vscpdrv.cpp"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
 </CodeLite_Project>
