Fixed references to can232 driver name (can232drv.so to vscpl1_can232drv.so and vscpl1_can232drv.dll). Changed baud rate for can232 to 57600 (default for adapter).

--- a/src/vscp/daemon/linux/carambola/vscpd.conf
+++ b/src/vscp/daemon/linux/carambola/vscpd.conf
@@ -90,8 +90,8 @@
 		</driver>
 		<driver>
 			<name>can232</name>
-			<parameter>/dev/vscp0;19200;0;0;125</parameter>
-			<path>/usr/local/lib/can232drv.so</path>
+			<parameter>/dev/ttyS0;57600;0;0;125</parameter>
+			<path>/usr/local/lib/vscpl1_can232drv.so</path>
 			<flags>0</flags>
 		</driver>
 		-->	
